Project renaming and minor changes to CelestialBody base class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,9 +3,9 @@ EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ephemeral")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ephemeral")
-+ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ephemeralGameModeBase")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Ephemeral")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Ephemeral")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="EphemeralGameModeBase")
 
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
