--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=20C80085684E022FEE4A9783A251295C
+ProjectName=Ephemeral
+CompanyName=Evan Sneath
 
 [StartupActions]
 bAddPacks=True
